feat: add outlet reorganization with drag-and-drop and Docker CI/CD
- Add display_order column to database schema for custom outlet ordering
- Implement drag-and-drop reorganization in frontend with @dnd-kit
- Add API endpoints for reordering and resetting outlet order
- Fix React hooks issue in OutletGrid component
- Create GitHub Actions workflow for multi-arch Docker builds
- Add production Docker Compose configuration
- Include comprehensive deployment documentation
- Support for both amd64 and arm64 architectures
- Automated image publishing to GitHub Container Registry

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,3 +34,12 @@ WS_MAX_CONNECTIONS=100
 # Metrics Retention
 METRICS_RETENTION_DAYS=30
 EVENTS_RETENTION_DAYS=90
+
+# Prometheus Metrics Configuration
+PROMETHEUS_ENABLED=true              # Enable/disable Prometheus metrics endpoint
+PROMETHEUS_DEFAULT_METRICS=true      # Collect default Node.js metrics (memory, CPU, etc.)
+
+# Polling Intervals (override defaults if needed)
+POLL_INTERVAL=30000                  # PDU polling interval in ms (default: 30s)
+RECONCILE_INTERVAL=60000             # State reconciliation interval in ms (default: 60s)
+METRICS_INTERVAL=300000              # Power metrics collection interval in ms (default: 5 minutes)
