--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,15 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "elysia": "^1.0.0",
     "@elysiajs/cors": "^1.0.0",
-    "@elysiajs/swagger": "^1.0.0",
     "@elysiajs/static": "^1.0.0",
+    "@elysiajs/swagger": "^1.0.0",
     "drizzle-orm": "^0.29.0",
-    "postgres": "^3.4.0",
+    "elysia": "^1.0.0",
     "net-snmp": "^3.9.0",
     "pino": "^8.17.0",
+    "postgres": "^3.4.0",
+    "prom-client": "^15.1.3",
     "zod": "^3.22.0"
   },
   "devDependencies": {
